Fixed Safari style bugs
- overlapping flexboxes
- button margin not being reset

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -14,6 +14,7 @@
   box-sizing: border-box;
 
   appearance: none;
+  margin: 0;
   padding: 0;
   border: none;
   background: transparent;
@@ -63,7 +64,7 @@
   &-label {
     font-weight: bold;
     padding-right: 0.8rem;
-    flex: 0 1 auto;
+    flex: 0 0 auto;
     white-space: nowrap;
   }
 
